--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
   "homepage": "https://github.com/iswinter1993/web-tool#readme",
   "dependencies": {
     "@discordjs/rest": "^0.4.1",
+    "agentkeepalive": "^4.2.1",
     "axios": "^0.26.1",
+    "carlo": "^0.9.46",
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
+    "express": "^4.18.1",
     "got": "^12.0.4",
     "http-proxy": "^1.18.1",
     "https-proxy-agent": "^5.0.1",
     "node-fetch": "^3.2.4",
-    "puppeteer": "^14.1.0"
+    "npm": "^8.10.0",
+    "puppeteer": "^13.6.0",
+    "puppeteer-core": "^13.6.0",
+    "request": "^2.88.2",
+    "tunnel": "^0.0.6"
   },
   "type": "module"
 }
